# scconfluence

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
docs/source/: base_module.rst  conf.py  dataset_utils.rst  distributions.rst  faq.rst  index.rst  model.rst  nn.rst  unimodal.rst
docs/source/tutorials/: RNA_ATAC_pbmc_tutorial.ipynb  RNA_FISH_tutorial.ipynb  RNA_PROT_tutorial.ipynb
scconfluence/: __init__.py  base_module.py  dataset_utils.py  distributions.py  model.py  nn.py  unimodal.py
tests/: context.py  test_main.py
tutorials/: RNA_ATAC_pbmc_tutorial.ipynb  RNA_FISH_tutorial.ipynb
